--- a/slides.tex
+++ b/slides.tex
@@ -220,19 +220,21 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge How does it work?
-% attribute successes to outside factors - luck, colleagues
-% attribute failures to themselves
-% found to be far more common in women than men
-% women viewing ourselves as phony is consistent with societal view that we aren't competent
-% easier to not internalize success than go against the views of society!
-% often seem to perservere despite that, some desire to prove society and themselves wrong
+    % attribute successes to outside factors - luck, colleagues
+    % attribute failures to themselves
+    % found to be far more common in women than men
+    % women viewing ourselves as phony is consistent with societal view that we aren't competent
+    % worse for African American women
+    % easier to not internalize success than go against the views of society!
+    % often seem to perservere despite that, some desire to prove society and themselves wrong
     % often believe that intelligence is fixed rather than malleable
     % motivated by performance goals, try to prove intelligence
     % when fail - react 'helpless' way, blame selves, withdraw from task, anxiety, shame
     % overriding concern with others' impressions, idealised self image
-    % self worth unusually dependent on others - external validation goes away, they fall apart
+    % self worth unusually dependent on others - external validation goes away, fall apart
     \\ \small \cite{hh15}
     \\ \small \cite{langford93}
+    \\ \small \cite{colour}
   \end{center}
 \end{frame}
 
@@ -243,7 +245,7 @@ confidence that I will do well
     \\ \small \cite{sakulku11}
     % because they dismiss the success
     % disregard if there is any gap between their expectations and performance
-    % repititions of success show dif between actual and ideal standards, make it worse
+    % repetitions of success show dif between actual and ideal standards, make it worse
     % deny our competence, discount praise
   \end{center}
 \end{frame}
@@ -318,13 +320,13 @@ confidence that I will do well
     \Huge What childhood circumstances create it?
     \\ \small \cite{sakulku11}
     \\ \small \cite{langford93}
-% Generally either has a sibling or close relative that was the designated 'intelligent' family member
-% the woman is then told that she is the 'sensitive' or socially adept one, not the smart one
-% or, told that they are superior in every way and success will come easily
-% Then they can't cope with when it doesn't
-% Family valueing success with little effort
-% descrepency between feedback and actual success
-    % lack of positive reinforcement - ``nothing they do is ever good enough''
+    % Generally either has a sibling or close relative that was the designated 'intelligent' family member
+    % the woman is then told that she is the 'sensitive' or socially adept one, not the smart one
+    % or, told that they are superior in every way and success will come easily
+    % Then they can't cope with when it doesn't
+    % Family valueing success with little effort
+    % descrepency between feedback and actual success
+    % lack of positive reinforcement - ``nothing you do is ever good enough''
     % IP higher when family cohesion and expressiveness are low, family conflict and control high. Accounted for 12% of variation
     % if not supported or approved may feel achievements are dismissed, unimpressive, unimportant.
     % shame, humiliation and inauthenticity common with lack of +ve reinforcement
@@ -336,8 +338,8 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Personality traits
-% "common among individuals with particular personality traits (e.g. neuroticism, achievement-orientation), have perfectionist expectations over work"
-    % inverse with conscientiousness? what was the source?
+    % "common among individuals with particular personality traits (e.g. neuroticism, achievement-orientation), have perfectionist expectations over work"
+    % inverse with conscientiousness
     \\ \small \cite{hh15}
     \\ \small \cite{sakulku11}
   \end{center}
@@ -346,9 +348,9 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Work circumstances that contribute
-% "and who work in highly competitive, stressful occupations similar to that of the academic environment"
-% what about peer review?
-% higher in untenured faculty - probably maps to staff on fixed term contracts
+    % "and who work in highly competitive, stressful occupations similar to that of the academic environment"
+    % what about peer review?
+    % higher in untenured faculty - probably maps to staff on fixed term contracts
     % not studied in tech, but higher in systems librarians than other librarians
     % high tech knowledge requirements, constant technical change, feel out of date
     \\ \small \cite{hh15}
@@ -378,7 +380,7 @@ confidence that I will do well
     % could be to avoid negative interpersonal implications of future failures
     % only express lower performance expectations when they know others see it
     % correlated with other favourale impression management strategies
-    % makes *lots* of sense for women in tech, since being since as competetent makes you less likeable
+    % makes *lots* of sense for women in tech, since being seen as competetent makes you less likeable
   \end{center}
 \end{frame}
 
@@ -392,13 +394,13 @@ confidence that I will do well
   \begin{center}
     \Huge Intellectual Inauthenticity
     \\ \small \cite{clanceimes78}
-% chose not to reveal ideas or opinions
-% tell people what they want to hear
-% intellectual flattery - writing according to their teachers' biases
-% or for a developer - implementing it how the more senior developers or tech lead would want, not what you think is best
-% remaining silent in face of opposing view points
-% prevents them from finding out what people would think of their authentic views
-% maintains imposter syndrome
+    % chose not to reveal ideas or opinions
+    % tell people what they want to hear
+    % intellectual flattery - writing according to their teachers' biases
+    % or for a developer - implementing it how the more senior developers or tech lead would want, not what you think is best
+    % remaining silent in face of opposing view points
+    % prevents them from finding out what people would think of their authentic views
+    % maintains imposter syndrome
   \end{center}
 \end{frame}
 
@@ -409,17 +411,14 @@ confidence that I will do well
     %"Typically, she believes, "I am stupid," but at anther
     %level  she  believes  she  is  brilliant,  creative,  and  special  if  only  the  right  person  would  discover
     %her genius and thereby help her believe in her intellect. "
-% aim to be liked as well as recognised intellectually
-% finds a candidate she respects, then tries to impress to gain approval
-% studies them, figures out how to impress them, sets about winning them over
-% "For  example,  if  the  potential
-%mentor  grows  mushrooms,  the  woman
-%  will  make  it  her  business  to  be  able  to  converse
-%  enthusiastically  and  knowledgably  about  mushroom  growing.    "
-% listens with understanding and concern
-% usually gains approval, but doesn't work
-% will never believe the praise because it's based on liking her
-% if she was really that bright, would she need the outside approval?
+    % aim to be liked as well as recognised intellectually
+    % finds a candidate she respects, then tries to impress to gain approval
+    % studies them, figures out how to impress them, sets about winning them over
+    % may pick up ttheir hobbies
+    % listens with understanding and concern
+    % usually gains approval, but doesn't work
+    % will never believe the praise because it's based on liking her
+    % if she was really that bright, would she need the outside approval?
   \end{center}
 \end{frame}
 
@@ -427,11 +426,11 @@ confidence that I will do well
   \begin{center}
     \Huge Avoiding displays of confidence
     \\ \small \cite{clanceimes78}
-% find a recent quote for success going against likeability for women
-% Many women have a motive to avoid success, a well justified fear of rejection or less feminine if they do
-% look at all the crap Julia Gillard put up with - quote from her speech
-% pattern of tight roping
-% denying their success allows them to live out achievement orientation while allaying some fears about being a successful women
+    % find a recent quote for success going against likeability for women
+    % Many women have a motive to avoid success, a well justified fear of rejection or less feminine if they do
+    % look at all the crap Julia Gillard put up with - quote from her speech
+    % pattern of tight roping
+    % denying their success allows them to live out achievement orientation while allaying some fears about being a successful women
   \end{center}
 \end{frame}
 
@@ -467,7 +466,6 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Psychological distress
-
     \\ \small \cite{hh15}
   \end{center}
 \end{frame}
@@ -475,7 +473,6 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Low self confidence
-
     \\ \small \cite{hh15}
   \end{center}
 \end{frame}
@@ -491,14 +488,12 @@ confidence that I will do well
   \begin{center}
     \Huge Low self-efficacy
     \\ \small \cite{feedback}
-    % attribute initial success to ability, higher self efficacy
+    % attribute initial success to ability -> higher self efficacy
     % higher self efficacy related to higher performance
     % leads to higher self efficacy
     % performance analysis in early life super important - provides anchor, influencing later attribution
   \end{center}
 \end{frame}
-
-
 
 \begin{frame}
   \begin{center}
@@ -509,13 +504,12 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Mentoring
-
     \\ \small \cite{hh15}
-% They can normalise the feelings
-% emotional support
-% instrumental support
-% challenge to accept praise
-% even helpful if they don't discuss IP
+    % They can normalise the feelings
+    % emotional support
+    % instrumental support (tangible help with specific problems)
+    % challenge to accept praise
+    % even helpful if they don't discuss IP
     % mentors can be the target of unfair comparisons - 67% don't directly discuss with mentor
   \end{center}
 \end{frame}
