Simplify some wording, clarify notes

--- a/slides.tex
+++ b/slides.tex
@@ -47,7 +47,7 @@
 
 \begin{frame}
   \begin{center}
-    \Huge Are any of these true for you?
+    \Huge Are these true for you?
     \\ \small \cite{clance85}
   \end{center}
 \end{frame}
@@ -200,7 +200,7 @@ confidence that I will do well
   \begin{center}
     \Huge New endeavour
     \\ \small \cite{apa13}
-    % me with the greens - Apsara & Asher suggesting I go for council
+    % neighbourhood organiser and suggesting I be a council candidate
   \end{center}
 \end{frame}
 
@@ -427,8 +427,7 @@ confidence that I will do well
     \Huge Avoiding displays of confidence
     \\ \small \cite{clanceimes78}
     % find a recent quote for success going against likeability for women
-    % Many women have a motive to avoid success, a well justified fear of rejection or less feminine if they do
-    % look at all the crap Julia Gillard put up with - quote from her speech
+    % Many women have a motive to avoid success, a well justified fear of rejection or being seen as less feminine
     % pattern of tight roping
     % denying their success allows them to live out achievement orientation while allaying some fears about being a successful women
   \end{center}
