make notes small

--- a/slides.tex
+++ b/slides.tex
@@ -220,6 +220,7 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge How does it work?
+    \small
     % attribute successes to outside factors - luck, colleagues
     % attribute failures to themselves
     % found to be far more common in women than men
@@ -253,6 +254,7 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Desire to be the best
+    \small
     % will be the biggest fish in a small pond (school)
     % then go to uni - lots of bright people, not the best anymore
     % conclude that they are stupid because they aren't the best anymore
@@ -338,6 +340,7 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Personality traits
+    \small
     % "common among individuals with particular personality traits (e.g. neuroticism, achievement-orientation), have perfectionist expectations over work"
     % inverse with conscientiousness
     \\ \small \cite{hh15}
@@ -348,6 +351,7 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Work circumstances that contribute
+    \small
     % "and who work in highly competitive, stressful occupations similar to that of the academic environment"
     % what about peer review?
     % higher in untenured faculty - probably maps to staff on fixed term contracts
@@ -578,6 +582,7 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge What to do?
+    \small
     % steps to help yourself and others who experience IP
   \end{center}
 \end{frame}
@@ -585,6 +590,7 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Talk about it
+    \small
     % discuss it in your workplace
     % like the group therapy sessions
   \end{center}
@@ -593,6 +599,7 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Be aware when people show it
+    \small
     % yourself and others
     % I had such bad IP I thought 'they have IP, but I'm right!'
   \end{center}
@@ -607,6 +614,7 @@ confidence that I will do well
 \begin{frame}
   \begin{center}
     \Huge Get perspective
+    \small
     % from people that will evaluate you fairly
     % don't charm them
   \end{center}
