--- a/slides.tex
+++ b/slides.tex
@@ -23,6 +23,12 @@
 
 \begin{frame}
   \begin{center}
+    \includegraphics[scale=.5]{./assets/dog.jpg}
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
     \Huge Do you have it?
   \end{center}
 \end{frame}
@@ -182,10 +188,10 @@ confidence that I will do well
     \\ \small \cite{clanceimes78}
     \\ \small \cite{attr98}
     \\ \small \cite{colour}
-    % initially discovered in high achieving women studying and in academia
-    % later found in to be in other populations too
-    % Maybe higher in women, research goes both ways
-    % Maybe higher in some ethnic groups, studied in African Americans
+%     initially discovered in high achieving women studying and in academia
+%     later found in to be in other populations too
+%     Maybe higher in women, research goes both ways
+%     Maybe higher in some ethnic groups, studied in African Americans
   \end{center}
 \end{frame}
 
@@ -200,7 +206,7 @@ confidence that I will do well
   \begin{center}
     \Huge New endeavour
     \\ \small \cite{apa13}
-    % neighbourhood organiser and suggesting I be a council candidate
+     neighbourhood organiser and suggesting I be a council candidate
   \end{center}
 \end{frame}
 
@@ -221,18 +227,17 @@ confidence that I will do well
   \begin{center}
     \Huge How does it work?
     \small
-    % attribute successes to outside factors - luck, colleagues
-    % attribute failures to themselves
-    % found to be far more common in women than men
-    % women viewing ourselves as phony is consistent with societal view that we aren't competent
-    % worse for African American women
-    % easier to not internalize success than go against the views of society!
-    % often seem to perservere despite that, some desire to prove society and themselves wrong
-    % often believe that intelligence is fixed rather than malleable
-    % motivated by performance goals, try to prove intelligence
-    % when fail - react 'helpless' way, blame selves, withdraw from task, anxiety, shame
-    % overriding concern with others' impressions, idealised self image
-    % self worth unusually dependent on others - external validation goes away, fall apart
+%     attribute successes to outside factors - luck, colleagues \\
+%     attribute failures to themselves \\
+%     found to be far more common in women than men \\
+%     women viewing ourselves as phony is consistent with societal view that we aren't competent \\
+%     worse for African American women \\
+%     easier to not internalize success than go against the views of society! \\
+%     often believe that intelligence is fixed rather than malleable \\
+%     motivated by performance goals, try to prove intelligence \\
+%     when fail - react 'helpless' way, blame selves, withdraw from task, anxiety, shame \\
+%     overriding concern with others' impressions, idealised self image \\
+%     self worth unusually dependent on others - external validation goes away, fall apart \\
     \\ \small \cite{hh15}
     \\ \small \cite{langford93}
     \\ \small \cite{colour}
@@ -244,10 +249,10 @@ confidence that I will do well
     \Huge Success does not fix it
     \\ \small \cite{clanceimes78}
     \\ \small \cite{sakulku11}
-    % because they dismiss the success
-    % disregard if there is any gap between their expectations and performance
-    % repetitions of success show dif between actual and ideal standards, make it worse
-    % deny our competence, discount praise
+     % because they dismiss the success
+     % disregard if there is any gap between their expectations and performance
+     % repetitions of success show dif between actual and ideal standards, make it worse
+     % deny our competence, discount praise
   \end{center}
 \end{frame}
 
@@ -255,9 +260,9 @@ confidence that I will do well
   \begin{center}
     \Huge Desire to be the best
     \small
-    % will be the biggest fish in a small pond (school)
-    % then go to uni - lots of bright people, not the best anymore
-    % conclude that they are stupid because they aren't the best anymore
+     % will be the biggest fish in a small pond (school)
+     % then go to uni - lots of bright people, not the best anymore
+     % conclude that they are stupid because they aren't the best anymore
     \\ \small \cite{sakulku11}
   \end{center}
 \end{frame}
@@ -273,7 +278,7 @@ confidence that I will do well
   \begin{center}
     \Huge Defendence
     \\ \small \cite{langford93}
-    % mistrusting others
+     % mistrusting others
   \end{center}
 \end{frame}
 
@@ -281,7 +286,7 @@ confidence that I will do well
   \begin{center}
     \Huge Low affiliation
     \\ \small \cite{langford93}
-    % in women. enjoyable involvement with other people
+     % in women. enjoyable involvement with other people
   \end{center}
 \end{frame}
 
@@ -289,7 +294,7 @@ confidence that I will do well
   \begin{center}
     \Huge Low play
     \\ \small \cite{langford93}
-    % don't do things for fun
+     % don't do things for fun
   \end{center}
 \end{frame}
 
@@ -297,7 +302,7 @@ confidence that I will do well
   \begin{center}
     \Huge Impulsivity
     \\ \small \cite{langford93}
-    % low in women, high in men
+     % low in women, high in men
   \end{center}
 \end{frame}
 
@@ -305,7 +310,7 @@ confidence that I will do well
   \begin{center}
     \Huge Need for change
     \\ \small \cite{langford93}
-    % low in women, high in men
+     % low in women, high in men
   \end{center}
 \end{frame}
 
@@ -313,7 +318,7 @@ confidence that I will do well
   \begin{center}
     \Huge Low need for order
     \\ \small \cite{langford93}
-    % in men
+     % in men
   \end{center}
 \end{frame}
 
@@ -322,18 +327,18 @@ confidence that I will do well
     \Huge What childhood circumstances create it?
     \\ \small \cite{sakulku11}
     \\ \small \cite{langford93}
-    % Generally either has a sibling or close relative that was the designated 'intelligent' family member
-    % the woman is then told that she is the 'sensitive' or socially adept one, not the smart one
-    % or, told that they are superior in every way and success will come easily
-    % Then they can't cope with when it doesn't
-    % Family valueing success with little effort
-    % descrepency between feedback and actual success
-    % lack of positive reinforcement - ``nothing you do is ever good enough''
-    % IP higher when family cohesion and expressiveness are low, family conflict and control high. Accounted for 12% of variation
-    % if not supported or approved may feel achievements are dismissed, unimpressive, unimportant.
-    % shame, humiliation and inauthenticity common with lack of +ve reinforcement
-    % IP highly correlated with need to please others in family
-    % try to live up to idealised image to win approval
+     % Generally either has a sibling or close relative that was the designated 'intelligent' family member \\
+     % the woman is then told that she is the 'sensitive' or socially adept one, not the smart one \\
+     % or, told that they are superior in every way and success will come easily \\
+     % Then they can't cope with when it doesn't \\
+     % Family valueing success with little effort \\
+     % descrepency between feedback and actual success \\
+     % lack of positive reinforcement - ``nothing you do is ever good enough'' \\
+     % IP higher when family cohesion and expressiveness are low, family conflict and control high. Accounted for 12 of variation \\
+     % if not supported or approved may feel achievements are dismissed, unimpressive, unimportant. \\
+     % shame, humiliation and inauthenticity common with lack of +ve reinforcement \\
+     % IP highly correlated with need to please others in family \\
+     % try to live up to idealised image to win approval \\
   \end{center}
 \end{frame}
 
@@ -341,8 +346,8 @@ confidence that I will do well
   \begin{center}
     \Huge Personality traits
     \small
-    % "common among individuals with particular personality traits (e.g. neuroticism, achievement-orientation), have perfectionist expectations over work"
-    % inverse with conscientiousness
+     % "common among individuals with particular personality traits (e.g. neuroticism, achievement-orientation), have perfectionist expectations over work"
+     % inverse with conscientiousness
     \\ \small \cite{hh15}
     \\ \small \cite{sakulku11}
   \end{center}
@@ -352,11 +357,14 @@ confidence that I will do well
   \begin{center}
     \Huge Work circumstances that contribute
     \small
-    % "and who work in highly competitive, stressful occupations similar to that of the academic environment"
-    % what about peer review?
-    % higher in untenured faculty - probably maps to staff on fixed term contracts
-    % not studied in tech, but higher in systems librarians than other librarians
-    % high tech knowledge requirements, constant technical change, feel out of date
+     % highly competitive, stressful occupations \\
+     % what about peer review? \\
+     % higher in untenured faculty - probably maps to staff on fixed term contracts \\
+     % not studied in tech, but higher in systems librarians than other librarians \\
+     % high tech knowledge requirements, constant technical change, feel out of date \\
+     % translate to devs - expectation to keep up with emerging tech \\
+     % tendency to focus on what colleagues know that we don't \\
+     % how many new js frameworks should we learn per week? \\
     \\ \small \cite{hh15}
     \\ \small \cite{clark14}
   \end{center}
@@ -366,12 +374,12 @@ confidence that I will do well
   \begin{center}
     \Huge Racial issues
     \\ \small \cite{colour}
-    % studied in African Americans
-    % people's presumed incompetence in African American women
-    % vital for them to establish self worth and self reliance - others assessment will be unfairly negative
-    % Group counselling with other African American women is very effective
-    % more comfortable with people like them, see the ridicilousness of others IP
-    % similar situation -> share strategies
+     % studied in African Americans \\
+     % people's presumed incompetence in African American women \\
+     % vital for them to establish self worth and self reliance - others assessment will be unfairly negative \\
+     % Group counselling with other African American women is very effective \\
+     % more comfortable with people like them, see the ridicilousness of others IP \\
+     % similar situation - share strategies \\
   \end{center}
 \end{frame}
 
@@ -379,12 +387,12 @@ confidence that I will do well
   \begin{center}
     \Huge Self presentation
     \\ \small \cite{sakulku11}
-    % Do not want to appear imperfect, but actually openly disclose their imperfection.
-    % Is it an interpersonal strategy rather than self evalution?
-    % could be to avoid negative interpersonal implications of future failures
-    % only express lower performance expectations when they know others see it
-    % correlated with other favourale impression management strategies
-    % makes *lots* of sense for women in tech, since being seen as competetent makes you less likeable
+     % Do not want to appear imperfect, but actually openly disclose their imperfection.\\
+     % Is it an interpersonal strategy rather than self evalution?\\
+     % could be to avoid negative interpersonal implications of future failures\\
+     % only express lower performance expectations when they know others see it\\
+     % correlated with other favourale impression management strategies\\
+     % makes *lots* of sense for women in tech, since being seen as competetent makes you less likeable\\
   \end{center}
 \end{frame}
 
@@ -398,13 +406,13 @@ confidence that I will do well
   \begin{center}
     \Huge Intellectual Inauthenticity
     \\ \small \cite{clanceimes78}
-    % chose not to reveal ideas or opinions
-    % tell people what they want to hear
-    % intellectual flattery - writing according to their teachers' biases
-    % or for a developer - implementing it how the more senior developers or tech lead would want, not what you think is best
-    % remaining silent in face of opposing view points
-    % prevents them from finding out what people would think of their authentic views
-    % maintains imposter syndrome
+     % chose not to reveal ideas or opinions\\
+     % tell people what they want to hear\\
+     % intellectual flattery - writing according to their teachers' biases\\
+     % or for a developer - implementing it how the more senior developers or tech lead would want, not what you think is best\\
+     % remaining silent in face of opposing view points\\
+     % prevents them from finding out what people would think of their authentic views\\
+     % maintains imposter syndrome\\
   \end{center}
 \end{frame}
 
@@ -412,17 +420,13 @@ confidence that I will do well
   \begin{center}
     \Huge Charm
     \\ \small \cite{clanceimes78}
-    %"Typically, she believes, "I am stupid," but at anther
-    %level  she  believes  she  is  brilliant,  creative,  and  special  if  only  the  right  person  would  discover
-    %her genius and thereby help her believe in her intellect. "
-    % aim to be liked as well as recognised intellectually
-    % finds a candidate she respects, then tries to impress to gain approval
-    % studies them, figures out how to impress them, sets about winning them over
-    % may pick up ttheir hobbies
-    % listens with understanding and concern
-    % usually gains approval, but doesn't work
-    % will never believe the praise because it's based on liking her
-    % if she was really that bright, would she need the outside approval?
+     % aim to be liked as well as recognised intellectually\\
+     % finds a candidate she respects, then tries to impress to gain approval\\
+     % studies them, figures out how to impress them, sets about winning them over\\
+     % may pick up ttheir hobbies listens with understanding and concern\\
+     % usually gains approval, but doesn't work\\
+     % will never believe the praise because it's based on liking her\\
+     % if she was really that bright, would she need the outside approval?\\
   \end{center}
 \end{frame}
 
@@ -430,10 +434,8 @@ confidence that I will do well
   \begin{center}
     \Huge Avoiding displays of confidence
     \\ \small \cite{clanceimes78}
-    % find a recent quote for success going against likeability for women
-    % Many women have a motive to avoid success, a well justified fear of rejection or being seen as less feminine
-    % pattern of tight roping
-    % denying their success allows them to live out achievement orientation while allaying some fears about being a successful women
+     % Many women have a motive to avoid success, a well justified fear of rejection or being seen as less feminine \\
+     % denying their success allows them to live out achievement orientation while allaying some fears about being a successful women \\
   \end{center}
 \end{frame}
 
@@ -461,8 +463,8 @@ confidence that I will do well
   \begin{center}
     \Huge Emotional exhaustion
     \\ \small \cite{hh15}
-    % stress part of burnout - fatigue, depression, emotional and cognitive distancing -> low work satisfaction and performance
-  \end{center}
+     % stress part of burnout - fatigue, depression, emotional and cognitive distancing - low work satisfaction and performance
+  % \end{center}
 \end{frame}
 
 
@@ -482,7 +484,7 @@ confidence that I will do well
 
 \begin{frame}
   \begin{center}
-    \Huge Adversely related to job well-being, satisfaction and performance
+    \Huge Lower job well-being, satisfaction and performance
     \\ \small \cite{hh15}
   \end{center}
 \end{frame}
@@ -491,10 +493,9 @@ confidence that I will do well
   \begin{center}
     \Huge Low self-efficacy
     \\ \small \cite{feedback}
-    % attribute initial success to ability -> higher self efficacy
-    % higher self efficacy related to higher performance
-    % leads to higher self efficacy
-    % performance analysis in early life super important - provides anchor, influencing later attribution
+     % attribute initial success to ability - higher self efficacy \\
+     % higher self efficacy related to higher performance \\
+     % performance analysis in early life super important - provides anchor, influencing later attribution \\
   \end{center}
 \end{frame}
 
@@ -508,12 +509,12 @@ confidence that I will do well
   \begin{center}
     \Huge Mentoring
     \\ \small \cite{hh15}
-    % They can normalise the feelings
-    % emotional support
-    % instrumental support (tangible help with specific problems)
-    % challenge to accept praise
-    % even helpful if they don't discuss IP
-    % mentors can be the target of unfair comparisons - 67% don't directly discuss with mentor
+     % They can normalise the feelings \\
+     % emotional support \\
+     % instrumental support (tangible help with specific problems) \\
+     % challenge to accept praise \\
+     % even helpful if they don't discuss IP \\
+     % mentors can be the target of unfair comparisons - 67\% don't directly discuss with mentor \\
   \end{center}
 \end{frame}
 
@@ -521,7 +522,13 @@ confidence that I will do well
   \begin{center}
     \Huge Positive reinforcement
     \\ \small \cite{hh15}
-    % greens appreciation letters (include photo)
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \includegraphics[scale=.07]{./assets/IMG_20160809_162050.jpg}
+    % covering different contributions from organising to office quiz contributions
   \end{center}
 \end{frame}
 
@@ -529,7 +536,7 @@ confidence that I will do well
   \begin{center}
     \Huge Identify feelings
     \\ \small \cite{caltech}
-    % awareness is first step to change
+     % awareness is first step to change
   \end{center}
 \end{frame}
 
@@ -537,7 +544,7 @@ confidence that I will do well
   \begin{center}
     \Huge Reality check
     \\ \small \cite{caltech}
-    % question the thoughts
+     % question the thoughts
   \end{center}
 \end{frame}
 
@@ -566,7 +573,7 @@ confidence that I will do well
   \begin{center}
     \Huge Social support
     \\ \small \cite{caltech}
-    % discuss feelings, get perspective
+     discuss feelings, get perspective
   \end{center}
 \end{frame}
 
@@ -574,8 +581,8 @@ confidence that I will do well
   \begin{center}
     \Huge Reduce dependency
     \\ \small \cite{langford93}
-    % on external validation for self esteem
-    % internalise self worth
+     % on external validation for self esteem
+     % internalise self worth
   \end{center}
 \end{frame}
 
@@ -583,7 +590,6 @@ confidence that I will do well
   \begin{center}
     \Huge What to do?
     \small
-    % steps to help yourself and others who experience IP
   \end{center}
 \end{frame}
 
@@ -591,8 +597,7 @@ confidence that I will do well
   \begin{center}
     \Huge Talk about it
     \small
-    % discuss it in your workplace
-    % like the group therapy sessions
+     % discuss it in your workplace, like the group therapy sessions
   \end{center}
 \end{frame}
 
@@ -600,8 +605,8 @@ confidence that I will do well
   \begin{center}
     \Huge Be aware when people show it
     \small
-    % yourself and others
-    % I had such bad IP I thought 'they have IP, but I'm right!'
+     % yourself and others \\
+     % I had such bad IP I thought 'they have IP, but I'm right!'
   \end{center}
 \end{frame}
 
@@ -615,14 +620,16 @@ confidence that I will do well
   \begin{center}
     \Huge Get perspective
     \small
-    % from people that will evaluate you fairly
-    % don't charm them
+     % from people that will evaluate you fairly \\
+     % don't charm them
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
     \Huge Questions?
+    github.com/biancag/imposter-syndrome
+    bianca.rachel.gibson@gmail.com
   \end{center}
 \end{frame}
 
