Add rendered notes and slides

--- a/slides.tex
+++ b/slides.tex
@@ -464,7 +464,7 @@ confidence that I will do well
     \Huge Emotional exhaustion
     \\ \small \cite{hh15}
      % stress part of burnout - fatigue, depression, emotional and cognitive distancing - low work satisfaction and performance
-  % \end{center}
+  \end{center}
 \end{frame}
 
 
