Use symbols to explain gender differences better in slides

--- a/slides.tex
+++ b/slides.tex
@@ -127,7 +127,7 @@
 \begin{frame}
   \begin{center}
     \Huge   I’m  disappointed  at  times  in  my  present  accomplishments  and  think  I should have accomplished much more
-\end{center}
+  \end{center}
 \end{frame}
 
 \begin{frame}
@@ -139,21 +139,21 @@
 \begin{frame}
   \begin{center}
     \Huge     I’m  often  afraid  that  I  may  fail  at  a  new  assignment  or  undertaking  even  though  I  generally  do  well  at  what  I
-  attempt
-\end{center}
+    attempt
+  \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
     \Huge   When  I’ve  succeeded  at  something  and  received  recognition  for  my  accomplishments,  I  have  doubts  that I can keep repeating that success
-\end{center}
+  \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
     \Huge     If  I  receive  a  great  deal  of  praise  and  recognition  for  something  I’ve  accomplished,  I  tend  to  discount  the  importance
-  of  what  I’ve  done
-\end{center}
+    of  what  I’ve  done
+  \end{center}
 \end{frame}
 
 \begin{frame}
@@ -165,21 +165,21 @@
 \begin{frame}
   \begin{center}
     \Huge      I often worry about not succeeding with a project or examination, even though others around me have considerable
-confidence that I will do well
-\end{center}
+    confidence that I will do well
+  \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
     \Huge       If  I’m  going  to  receive  a  promotion  or  gain  recognition  of  some  kind,  I  hesitate  to  tell  others  until  it  is  an
-  accomplished fact
-\end{center}
+    accomplished fact
+  \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
     \Huge  I  feel  bad  and  discouraged  if  I’m  not  `the  best'  or  at  least  `very  special'  in  situations  that  involve  achievement
-\end{center}
+  \end{center}
 \end{frame}
 
 \begin{frame}
@@ -206,7 +206,7 @@ confidence that I will do well
   \begin{center}
     \Huge New endeavour
     \\ \small \cite{apa13}
-     neighbourhood organiser and suggesting I be a council candidate
+    neighbourhood organiser and suggesting I be a council candidate
   \end{center}
 \end{frame}
 
@@ -284,8 +284,10 @@ confidence that I will do well
 
 \begin{frame}
   \begin{center}
-    \Huge Low affiliation
+    \Huge Low affiliation \\
+    \includegraphics[scale=.025]{./assets/women.png}
     \\ \small \cite{langford93}
+    % this citation looks funny
      % in women. enjoyable involvement with other people
   \end{center}
 \end{frame}
@@ -300,24 +302,45 @@ confidence that I will do well
 
 \begin{frame}
   \begin{center}
-    \Huge Impulsivity
-    \\ \small \cite{langford93}
+    \Huge Low Impulsivity \\
+    \includegraphics[scale=.025]{./assets/women.png} \\
+    \small \cite{langford93}
      % low in women, high in men
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
-    \Huge Need for change
-    \\ \small \cite{langford93}
+    \Huge High Impulsivity \\
+    \includegraphics[scale=.025]{./assets/men.png} \\
+    \small \cite{langford93}
      % low in women, high in men
   \end{center}
 \end{frame}
 
 \begin{frame}
   \begin{center}
-    \Huge Low need for order
-    \\ \small \cite{langford93}
+    \Huge Low need for change \\
+    \includegraphics[scale=.025]{./assets/women.png} \\
+    \small \cite{langford93}
+     % low in women, high in men
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge High need for change \\
+    \includegraphics[scale=.025]{./assets/men.png} \\
+    \small \cite{langford93}
+     % low in women, high in men
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \Huge Low need for order \\
+    \includegraphics[scale=.025]{./assets/men.png} \\
+    \small \cite{langford93}
      % in men
   \end{center}
 \end{frame}
@@ -573,7 +596,7 @@ confidence that I will do well
   \begin{center}
     \Huge Social support
     \\ \small \cite{caltech}
-     discuss feelings, get perspective
+    % discuss feelings, get perspective
   \end{center}
 \end{frame}
 
@@ -634,7 +657,7 @@ confidence that I will do well
 \end{frame}
 
 \begin{frame}
- \bibliographystyle{apacite}
+  \bibliographystyle{apacite}
 
   \bibliography{./slides}
 \end{frame}
